[gd_scene load_steps=2 format=3 uid="uid://cheat_shelter_01"]

[ext_resource type="Script" path="res://scripts/ui/cheat_shelter_panel.gd" id="1_cheat"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.08, 0.08, 0.12, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="CheatShelterPanel" type="CanvasLayer"]
layer = 20
script = ExtResource("1_cheat")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 3
anchors_preset = 4
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -39.0
offset_right = 72.0
offset_bottom = 39.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="Margin" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="VBox" type="VBoxContainer" parent="Panel/Margin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="BtnPlus" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "+"

[node name="ValueLabel" type="Label" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.95, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "0"
horizontal_alignment = 1

[node name="BtnMinus" type="Button" parent="Panel/Margin/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 18
text = "-"
